<resources>
    <string name="app_name">GpsLab</string>
    <string name="latitude_label">Latitude:</string>
    <string name="latitude_example">0</string>
    <string name="longitude_label">Longitude:</string>
    <string name="longitude_example">0</string>
    <string name="speed_label">Speed:</string>
    <string name="speed_example">0</string>
    <string name="direction_label">Direction:</string>
    <string name="no_direction">There\'s no direction</string>
    <string name="save_point">save point</string>
    <string name="distance_label">Distance and direction between saved and closest point</string>
    <string name="distance_example">distance</string>
    <string name="direction_distance_example">direction</string>
</resources>
